Add tests for text normalization and enhance CSV export functionality
- Implement tests for `normalize_text_value` to cover various input cases.
- Add unit tests for CSV export functions to ensure expected output structure.
- Update `SapBERTEmbedder.encode` method to include progress tracking.
- Modify sorting logic in `export_relabel_csv` to handle unmatched cases correctly.
- Introduce development dependencies for testing with pytest.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,9 @@ dependencies = [
   "tqdm>=4.66",
 ]
 
+[tool.uv]
+dev-dependencies = ["pytest>=8.0"]
+
 [project.urls]
 Repository = "https://sidata.plus/projects/thirawat-mapper-beta"
 Issues = "https://sidata.plus/support"
