--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling>=1.21"]
+requires = ["hatchling>=1.21", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [project]
@@ -43,7 +43,10 @@ Repository = "https://sidata.plus/projects/thirawat-mapper-beta"
 Issues = "https://sidata.plus/support"
 
 [tool.hatch.version]
-path = "src/thirawat_mapper/__init__.py"
+source = "vcs"
+
+[tool.hatch.version.raw-options]
+tag_regex = "^(?:v)?(?P<version>.+)$"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/thirawat_mapper"]
