--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,40 @@ on:
       - "v*"
 
 jobs:
-  test-build:
+  test:
+    name: Test (py${{ matrix.python-version }})
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.10", "3.11"]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
+          cache-dependency-glob: |
+            pyproject.toml
+
+      - name: Install dependencies
+        run: uv sync --group dev
+
+      - name: Run tests
+        run: uv run pytest
+
+  build:
+    name: Build dist (py3.11)
+    runs-on: ubuntu-latest
+    needs: test
 
     steps:
       - name: Checkout
@@ -30,9 +62,6 @@ jobs:
 
       - name: Install dependencies
         run: uv sync --group dev
-
-      - name: Run tests
-        run: uv run pytest
 
       - name: Install build tools
         run: uv pip install build twine
